# Tissu

./: CMakeLists.txt  Doxyfile  README.md  imgui.ini  parche.txt  proj.txt
.github/workflows/: ci.yml
core/: CMakeLists.txt
core/include/engine/: Cloth.hpp  ClothMesh.hpp  World.hpp
core/include/io/: AlembicExporter.hpp  ConfigLoader.hpp  OBJExporter.hpp  OBJLoader.hpp
core/include/math/: Types.hpp
core/include/physics/: AerodynamicForce.hpp  BendingConstraint.hpp  CapsuleCollider.hpp  Collider.hpp  Constraint.hpp  ContactConstraint.hpp  DistanceConstraint.hpp  Force.hpp  GravityForce.hpp  Particle.hpp  PinConstraint.hpp  PlaneCollider.hpp  Solver.hpp  SpatialHash.hpp  SphereCollider.hpp  VolumeConstraint.hpp
core/include/utils/: Logger.hpp
core/src/engine/: Cloth.cpp  ClothMesh.cpp  World.cpp
core/src/io/: AlembicExporter.cpp  ConfigLoader.cpp  OBJExporter.cpp  OBJLoader.cpp
core/src/physics/: AerodynamicForce.cpp  BendingConstraint.cpp  CapsuleCollider.cpp  Collider.cpp  Constraint.cpp  ContactConstraint.cpp  DistanceConstraint.cpp  Force.cpp  GravityForce.cpp  Particle.cpp  PinConstraint.cpp  PlaneCollider.cpp  Solver.cpp  SpatialHash.cpp  SphereCollider.cpp  VolumeConstraint.cpp
core/src/utils/: Logger.cpp
data/configs/materials/: cotton.json  denim.json  leather.json  silk.json  spandex.json
data/configs/physics/: bake.json  realtime.json
data/videos/: curtain.mp40000-0038.mkv
docs/: README.md
docs/core/: build_and_develops.md  physics_and_math.md
examples/: simulation.py
python/cloth_sdk/: __init__.py  engine.py
python/src/: bindings.cpp  bindings_headless.cpp
python/tissu/: __main__.py  _backend.py  engine.py
tests/: CMakeLists.txt  test_config_loader.cpp  test_particle.cpp  test_spatial_hash.cpp  test_sphere_collider.cpp
tests/core_tests/: bending_constraint_test.cpp  distance_constraint_test.cpp  particle_test.cpp  solver_test.cpp  spatial_hash_test.cpp
tests/physics/: test_distance_constraint.cpp  test_particle.cpp  test_pin_constraint.cpp  test_plane_collider.cpp  test_volume_constraint.cpp
viewer/include/: Application.hpp  Camera.hpp  Renderer.hpp
viewer/shaders/: cloth.frag  cloth.vert
viewer/src/: Application.cpp  Camera.cpp  Renderer.cpp
