add_executable(unit_tests
    physics/test_particle.cpp
    physics/test_distance_constraint.cpp
    physics/test_pin_constraint.cpp
    physics/test_volume_constraint.cpp
    physics/test_spatial_hash.cpp
    physics/test_plane_collider.cpp
    physics/test_sphere_collider.cpp
    io/test_config_loader.cpp
)

target_link_libraries(unit_tests 
    PRIVATE 
        ClothCore
        GTest::gtest_main 
        Eigen3::Eigen
)

include(GoogleTest)
gtest_discover_tests(unit_tests)